--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第二部分 简单类型/第10章 简单类型的ML实现.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第二部分 简单类型/第10章 简单类型的ML实现.md
@@ -6,7 +6,7 @@
 
 ---
 
-本章介绍了如何使用 ML（Meta Language）语言实现简单类型 λ 演算（Simply Typed Lambda-Calculus）。这个实现遵循了第7章中无类型 λ 演算实现的思路，主要增加了一个用于在给定上下文中计算给定项的类型的函数 $typeof$。在介绍 $typeof$ 之前，我们需要一些用于操作上下文的底层机制。
+本章介绍了如何使用 ML（Meta Language）语言实现简单类型 λ 演算（Simply Typed Lambda-Calculus）。这个实现遵循了第7章中无类型 λ 演算实现的思路，主要增加了一个用于在给定上下文中计算给定项的🥑类型的函数🥑 $🥑typeof$。在介绍 $typeof$ 之前，我们需要一些用于操作上下文的底层机制。
 
 ---
 
@@ -30,7 +30,7 @@
 
 **扩展：**
 
-- 为了实现类型检查器，我们需要使用上下文来携带关于变量的类型假设。
+- 为了实现类型检查器，我们需要使用上下文来携带关于变量的🥑类型假设。
 
 - 我们通过向 $binding$ 类型添加一个新的构造器 $VarBind$ 来支持这一点：
 
@@ -233,7 +233,7 @@ let rec typeof ctx t =
 
    - $TmAbs(fi, x, tyT1, t2)$：
 
-     - 将参数 $x$ 的类型假设 $VarBind(tyT1)$ 添加到上下文中，得到新的上下文 $ctx'$。
+     - 🥑🥑🥑🥑🥑将参数 $x$ 的类型假设 $VarBind(tyT1)$ 添加到上下文中，得到新的上下文 $ctx'$。
 
      ```ocaml
      let ctx' = addbinding ctx x (VarBind(tyT1)) in
@@ -332,17 +332,350 @@ let rec typeof ctx t =
 
 ### ---------------------------
 
+### OCaml 实现：简单类型系统
 
+#### 第10章 **简单类型系统的 ML 实现** (An ML Implementation of Simple Types)
+
+本章介绍了如何使用 OCaml 实现简单类型的 λ 演算。该实现基于前面介绍的无类型 λ 演算，但加入了类型检查机制，扩展了上下文以携带类型假设，并使用 `typeof` 函数来计算表达式的类型。
+
+#### 10.1 **上下文** (Contexts)
+
+在无类型 λ 演算中，上下文只包含变量名的绑定。在引入类型系统后，我们需要使用上下文来携带变量的类型假设。
+
+```ocaml
+(* 定义类型绑定 *)
+type binding =
+    | NameBind
+    | VarBind of ty  (* 变量绑定，携带类型信息 *)
+
+(* 上下文为变量名和绑定类型的列表 *)
+type context = (string * binding) list
+
+(* 向上下文添加新绑定 *)
+let addbinding ctx x bind = (x, bind) :: ctx
+
+(* 获取上下文中第 i 个变量的绑定 *)
+let getbinding ctx i =
+  try List.nth ctx i
+  with Failure _ -> failwith "Variable not found"
+
+(* 从上下文中获取第 i 个变量的类型 *)
+let getTypeFromContext ctx i =
+  match getbinding ctx i with
+  | VarBind(tyT) -> tyT
+  | _ -> failwith "Wrong kind of binding"
+```
+
+#### 10.2 **项和类型** (Terms and Types)
+
+在简单类型 λ 演算中，支持布尔类型和函数类型。下面是类型的表示方式：
+
+```ocaml
+(* 定义类型 *)
+type ty =
+    | TyBool  (* 布尔类型 *)
+    | TyArr of ty * ty  (* 函数类型 T1 -> T2 *)
+
+(* 定义项 *)
+type term =
+    | TmTrue  (* 布尔常量 true *)
+    | TmFalse  (* 布尔常量 false *)
+    | TmIf of term * term * term  (* 条件表达式 *)
+    | TmVar of int  (* 变量，用索引表示 *)
+    | TmAbs of string * ty * term  (* λ 抽象，带有类型注释 *)
+    | TmApp of term * term  (* 函数应用 *)
+```
+
+#### 10.3 **类型检查** (Typechecking)
+
+`typeof` 函数根据 λ 演算的类型规则，递归地为每个项计算其类型。该函数根据不同的项的类型规则进行匹配并返回项的类型。
+
+```ocaml
+(* 计算项的类型 *)
+let rec typeof ctx t = match t with
+  | TmTrue -> TyBool  (* 布尔常量 true 的类型为 TyBool *)
+  | TmFalse -> TyBool  (* 布尔常量 false 的类型为 TyBool *)
+  | TmIf(t1, t2, t3) ->  (* 条件表达式类型检查 *)
+      if (typeof ctx t1) = TyBool then  (* t1 必须为布尔类型 *)
+        let tyT2 = typeof ctx t2 in
+        if tyT2 = (typeof ctx t3) then tyT2  (* t2 和 t3 的类型必须相同 *)
+        else failwith "If branches must have the same type"
+      else failwith "Guard of conditional must be a boolean"
+  | TmVar(i) -> getTypeFromContext ctx i  (* 变量类型通过上下文获取 *)
+  | TmAbs(x, tyT1, t2) ->  (* λ 抽象 *)
+      let ctx' = addbinding ctx x (VarBind(tyT1)) in  (* 添加变量的类型假设到上下文中 *)
+      let tyT2 = typeof ctx' t2 in
+      TyArr(tyT1, tyT2)  (* 返回函数类型 T1 -> T2 *)
+  | TmApp(t1, t2) ->  (* 函数应用 *)
+      let tyT1 = typeof ctx t1 in
+      let tyT2 = typeof ctx t2 in
+      (match tyT1 with
+        | TyArr(tyT11, tyT12) ->  (* 检查 t1 是否为函数类型 *)
+            if tyT2 = tyT11 then tyT12  (* 参数类型 t2 必须匹配函数类型的参数类型 *)
+            else failwith "Parameter type mismatch"
+        | _ -> failwith "Expected a function type")
+```
+
+### 详细说明：
+
+1. **布尔常量类型判断：**
+    - 对于 `TmTrue` 和 `TmFalse`，直接返回布尔类型 `TyBool`。
+
+2. **条件表达式：**
+    - 对于 `TmIf` 表达式，首先检查条件部分 `t1` 是否为布尔类型 `TyBool`。如果是，则递归计算两个分支 `t2` 和 `t3` 的类型，并确保它们相同。如果不相同或条件不是布尔类型，则报错。
+
+3. **变量：**
+    - 对于变量 `TmVar`，从上下文中获取该变量的类型。变量在项的内部表示为索引，因此通过索引查找上下文中的类型假设。
+
+4. **λ 抽象：**
+    - 对于 λ 抽象 `TmAbs`，首先将参数类型绑定到上下文中，然后递归计算函数体 `t2` 的类型。返回的类型是 `TyArr(tyT1, tyT2)`，表示参数类型到返回类型的函数类型。
+
+5. **函数应用：**
+    - 对于函数应用 `TmApp`，首先递归计算函数和参数的类型。检查函数的类型是否为 `TyArr(tyT11, tyT12)`，并确保参数的类型 `tyT2` 与函数类型的参数部分 `tyT11` 一致。如果一致，返回函数的返回类型 `tyT12`，否则报错。
+
+### 结论：
+
+- 通过这个 OCaml 实现，我们可以对简单类型 λ 演算中的表达式进行类型检查。`typeof` 函数实现了类型推导的核心逻辑，根据上下文和表达式的语法结构递归地计算类型。
+- 本章通过逐步引入上下文、类型表示以及类型检查函数，为后续复杂类型系统的实现提供了基础。
+
+你可以尝试将这些代码运行在 OCaml 环境中，进一步理解其工作机制。如果你对某些部分需要更详细的解释或有其他问题，欢迎继续提问！
 
 ### ----------------------------
 
+以下是完整的 OCaml 实现代码，涵盖了简单类型系统的上下文处理、项和类型的表示以及类型检查功能。你可以将此代码直接运行在 OCaml 环境中。
 
+```ocaml
+(* 定义类型 *)
+type ty =
+    | TyBool  (* 布尔类型 *)
+    | TyArr of ty * ty  (* 函数类型 T1 -> T2 *)
+
+(* 定义项 *)
+type term =
+    | TmTrue  (* 布尔常量 true *)
+    | TmFalse  (* 布尔常量 false *)
+    | TmIf of term * term * term  (* 条件表达式 *)
+    | TmVar of int  (* 变量，用索引表示 *)
+    | TmAbs of string * ty * term  (* λ 抽象，带有类型注释 *)
+    | TmApp of term * term  (* 函数应用 *)
+
+(* 定义绑定类型 *)
+type binding =
+    | NameBind  (* 名称绑定 *)
+    | VarBind of ty  (* 变量绑定，携带类型信息 *)
+
+(* 上下文为变量名和绑定类型的列表 *)
+type context = (string * binding) list
+
+(* 向上下文添加新绑定 *)
+let addbinding ctx x bind = (x, bind) :: ctx
+
+(* 获取上下文中第 i 个变量的绑定 *)
+let getbinding ctx i =
+  try List.nth ctx i
+  with Failure _ -> failwith "Variable not found"
+
+(* 从上下文中获取第 i 个变量的类型 *)
+let getTypeFromContext ctx i =
+  match getbinding ctx i with
+  | VarBind(tyT) -> tyT
+  | _ -> failwith "Wrong kind of binding"
+
+(* 计算项的类型 *)
+let rec typeof ctx t = match t with
+  | TmTrue -> TyBool  (* 布尔常量 true 的类型为 TyBool *)
+  | TmFalse -> TyBool  (* 布尔常量 false 的类型为 TyBool *)
+  | TmIf(t1, t2, t3) ->  (* 条件表达式类型检查 *)
+      if (typeof ctx t1) = TyBool then  (* t1 必须为布尔类型 *)
+        let tyT2 = typeof ctx t2 in
+        if tyT2 = (typeof ctx t3) then tyT2  (* t2 和 t3 的类型必须相同 *)
+        else failwith "If branches must have the same type"
+      else failwith "Guard of conditional must be a boolean"
+  | TmVar(i) -> getTypeFromContext ctx i  (* 变量类型通过上下文获取 *)
+  | TmAbs(x, tyT1, t2) ->  (* λ 抽象 *)
+      let ctx' = addbinding ctx x (VarBind(tyT1)) in  (* 添加变量的类型假设到上下文中 *)
+      let tyT2 = typeof ctx' t2 in
+      TyArr(tyT1, tyT2)  (* 返回函数类型 T1 -> T2 *)
+  | TmApp(t1, t2) ->  (* 函数应用 *)
+      let tyT1 = typeof ctx t1 in
+      let tyT2 = typeof ctx t2 in
+      (match tyT1 with
+        | TyArr(tyT11, tyT12) ->  (* 检查 t1 是否为函数类型 *)
+            if tyT2 = tyT11 then tyT12  (* 参数类型 t2 必须匹配函数类型的参数类型 *)
+            else failwith "Parameter type mismatch"
+        | _ -> failwith "Expected a function type")
+
+(* 示例上下文 *)
+let ctx = [("x", VarBind(TyBool)); ("y", VarBind(TyArr(TyBool, TyBool)))]
+
+(* 示例项： λx:Bool. x *)
+let example_term = TmAbs("x", TyBool, TmVar(0))
+
+(* 运行类型检查 *)
+let _ =
+  let ty = typeof ctx example_term in
+  match ty with
+  | TyBool -> print_endline "Type: Bool"
+  | TyArr(_, _) -> print_endline "Type: Function"
+  | _ -> print_endline "Unknown type"
+```
+
+### 运行说明：
+1. **上下文和类型推导**：在 `ctx` 上下文中，变量 `x` 被绑定为布尔类型 `TyBool`，而 `y` 被绑定为函数类型 `TyArr(TyBool, TyBool)`。
+2. **示例项**：`example_term` 是一个简单的 λ 抽象，表示 `λx:Bool. x`。
+3. **类型检查器**：`typeof` 函数将为给定的项计算其类型，并输出结果。
+
+你可以复制并运行这段代码，OCaml 将输出项的类型。
 
 ### ---------------------------
 
+抱歉之前的代码有误，问题出在 `getTypeFromContext` 函数中。`getbinding` 函数返回的是 `(string * binding)` 类型的值，但在 `getTypeFromContext` 中，我们需要从中提取 `binding` 部分。
 
+以下是修正后的完整可运行的 OCaml 代码：
+
+```ocaml
+(* 定义类型 *)
+type ty =
+    | TyBool  (* 布尔类型 *)
+    | TyArr of ty * ty  (* 函数类型 T1 -> T2 *)
+
+(* 定义项 *)
+type term =
+    | TmTrue  (* 布尔常量 true *)
+    | TmFalse  (* 布尔常量 false *)
+    | TmIf of term * term * term  (* 条件表达式 *)
+    | TmVar of int  (* 变量，用索引表示 *)
+    | TmAbs of string * ty * term  (* λ 抽象，带有类型注释 *)
+    | TmApp of term * term  (* 函数应用 *)
+
+(* 定义绑定类型 *)
+type binding =
+    | NameBind  (* 名称绑定 *)
+    | VarBind of ty  (* 变量绑定，携带类型信息 *)
+
+(* 上下文为变量名和绑定类型的列表 *)
+type context = (string * binding) list
+
+(* 向上下文添加新绑定 *)
+let addbinding ctx x bind = (x, bind) :: ctx
+
+(* 获取上下文中第 i 个变量的绑定 *)
+let getbinding ctx i =
+  try List.nth ctx i
+  with Failure _ -> failwith "Variable not found"
+
+(* 从上下文中获取第 i 个变量的类型 *)
+let getTypeFromContext ctx i =
+  match getbinding ctx i with
+  | (_, VarBind(tyT)) -> tyT  (* 提取绑定中的类型信息 *)
+  | _ -> failwith "Wrong kind of binding"
+
+(* 计算项的类型 *)
+let rec typeof ctx t = match t with
+  | TmTrue -> TyBool  (* 布尔常量 true 的类型为 TyBool *)
+  | TmFalse -> TyBool  (* 布尔常量 false 的类型为 TyBool *)
+  | TmIf(t1, t2, t3) ->  (* 条件表达式类型检查 *)
+      if (typeof ctx t1) = TyBool then  (* t1 必须为布尔类型 *)
+        let tyT2 = typeof ctx t2 in
+        if tyT2 = (typeof ctx t3) then tyT2  (* t2 和 t3 的类型必须相同 *)
+        else failwith "If branches must have the same type"
+      else failwith "Guard of conditional must be a boolean"
+  | TmVar(i) -> getTypeFromContext ctx i  (* 变量类型通过上下文获取 *)
+  | TmAbs(x, tyT1, t2) ->  (* λ 抽象 *)
+      let ctx' = addbinding ctx x (VarBind(tyT1)) in  (* 添加变量的类型假设到上下文中 *)
+      let tyT2 = typeof ctx' t2 in
+      TyArr(tyT1, tyT2)  (* 返回函数类型 T1 -> T2 *)
+  | TmApp(t1, t2) ->  (* 函数应用 *)
+      let tyT1 = typeof ctx t1 in
+      let tyT2 = typeof ctx t2 in
+      (match tyT1 with
+        | TyArr(tyT11, tyT12) ->  (* 检查 t1 是否为函数类型 *)
+            if tyT2 = tyT11 then tyT12  (* 参数类型 t2 必须匹配函数类型的参数类型 *)
+            else failwith "Parameter type mismatch"
+        | _ -> failwith "Expected a function type")
+
+(* 示例上下文 *)
+let ctx = [("x", VarBind(TyBool)); ("y", VarBind(TyArr(TyBool, TyBool)))]
+
+(* 示例项： λx:Bool. x *)
+let example_term = TmAbs("x", TyBool, TmVar(0))
+
+(* 运行类型检查 *)
+let _ =
+  let ty = typeof ctx example_term in
+  match ty with
+  | TyBool -> print_endline "Type: Bool"
+  | TyArr(_, _) -> print_endline "Type: Function"
+  | _ -> print_endline "Unknown type"
+```
+
+### 解释修正部分：
+
+- **`getTypeFromContext` 函数修正：**
+
+  原始代码中，`getTypeFromContext` 函数直接匹配 `getbinding ctx i` 的结果为 `VarBind(tyT)`，但实际上 `getbinding` 返回的是 `(string * binding)` 类型的值，因此需要先解构元组，提取出 `binding` 部分。
+
+  修正后的代码：
+
+  ```ocaml
+  let getTypeFromContext ctx i =
+    match getbinding ctx i with
+    | (_, VarBind(tyT)) -> tyT  (* 提取绑定中的类型信息 *)
+    | _ -> failwith "Wrong kind of binding"
+  ```
+
+- **关于变量索引：**
+
+  在此实现中，变量使用 De Bruijn 索引表示，最内层的绑定索引为 0，依次递增。因此，`getbinding` 函数可以直接使用 `List.nth ctx i` 来获取第 `i` 个绑定。
+
+### 运行结果：
+
+编译并运行上述代码，将输出：
+
+```
+Type: Function
+```
+
+这表明示例项 `λx:Bool. x` 的类型被正确地推导为一个函数类型。
+
+### 说明：
+
+- **上下文 `ctx`：** 包含了变量 `x` 和 `y` 的类型绑定，供类型检查器在遇到变量时查找其类型。
+- **示例项 `example_term`：** 定义了一个简单的 λ 抽象 `λx:Bool. x`，表示身份函数，接受一个布尔值并返回该值。
+- **类型检查器 `typeof`：** 递归地计算项的类型，根据类型规则进行匹配和验证。
+
+### 注意事项：
+
+- **变量绑定和上下文管理：** 在 λ 演算的实现中，正确地管理上下文和变量绑定至关重要，特别是在使用 De Bruijn 索引的情况下。
+- **类型匹配和错误处理：** 类型检查器需要精确地匹配类型，并在类型不匹配的情况下抛出适当的错误信息。
+
+### 进一步测试：
+
+你可以尝试修改 `example_term`，例如：
+
+- 定义一个应用项 `TmApp(TmVar(1), TmTrue)`，并在上下文中确保索引为 1 的变量是一个函数类型。
+- 定义一个条件表达式 `TmIf(TmVar(0), TmTrue, TmFalse)`，并相应地调整上下文。
+
+### 完整代码可运行：
+
+确保将上述代码保存为 `.ml` 文件，并使用 OCaml 编译器编译和运行：
+
+```bash
+ocamlc -o main main.ml
+./main
+```
+
+如果你有任何疑问或需要进一步的帮助，请随时提问！
 
 ### ----------------------------
+
+```ocaml
+File "main.ml", line 73, characters 4-5:
+73 |   | _ -> print_endline "Unknown type"
+         ^
+Warning 11 [redundant-case]: this match case is unused.
+Type: Function
+```
 
 
 
