--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第二部分 简单类型/第12章 规范化.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第二部分 简单类型/第12章 规范化.md
@@ -4,9 +4,9 @@
 
 **第12章 归一化（Normalization）**
 
-在本章中，我们将探讨纯简单类型 $\lambda$ 演算的另一个基本理论性质：对于每个良类型的程序，其求值保证在有限步内停止——也就是说，每个良类型的项都是可归一化的。
+在本章中，我们将探讨纯简单类型 $\lambda$ 演算的另一个基本理论性质：对于每个良类型的程序，其求值保证在有限步内停止——也就是说，每个🥑良类型的项都是可归一化的。
 
-**注意**：和我们之前讨论的类型安全性（type-safety）性质不同，归一化性质并不能扩展到全功能的编程语言，因为这些语言通常会扩展简单类型 $\lambda$ 演算，加入诸如**通用递归**（general recursion，参见第11.11节）或**递归类型**（recursive types，参见第20章）的构造，这些构造可以用于编写**非终止**（nonterminating）的程序。然而，当我们在第30-3节讨论系统 $F_\omega$ 的元理论时，归一化问题将会在类型层面重新出现：在该系统中，类型语言实际上包含了一个简单类型 $\lambda$ 演算的副本，而类型检查算法的终止将取决于对类型表达式的“归一化”操作保证终止。
+**注意**：和我们之前讨论的类型安全性（type-safety）性质不同，归一化性质并不能扩展到全功能的编程语言，因为这些语言通常会扩展简单类型 $\lambda$ 演算，加入🥑诸如**通用递归**（general recursion，参见第11.11节）🥑或**递归类型**（recursive types，参见第20章）的构造，这些构造可以用于编写🥑**非终止**（nonterminating）的程序。然而，当我们在第30-3节讨论系统🥑 $F_\omega$ 的元理论时，归一化问题将会在类型层面重新出现：在该系统中，类型语言实际上🥑包含了一个简单类型 $\lambda$ 演算的副本，而🥑类型检查算法的终止将取决于对类型表达式的🥑“归一化”操作保证终止。
 
 另一个研究归一化证明的原因是，它们是类型理论文献中最为优美且令人惊叹的数学内容之一，通常（如本章所示）涉及到**逻辑关系**（logical relations）这一基本的证明技巧。
 
