--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第二部分 简单类型/第13章 引用.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第二部分 简单类型/第13章 引用.md
@@ -4,11 +4,11 @@
 
 **第13章 引用（References）**
 
-到目前为止，我们已经讨论了各种纯语言特性，包括函数抽象（functional abstraction）、基本类型（basic types）如数字和布尔值，以及结构类型（structured types）如记录（records）和变体（variants）。这些特性构成了大多数编程语言的骨干，包括纯函数式语言如 Haskell、“主要是函数式”的语言如 ML、命令式语言如 C，以及面向对象语言如 Java。
+到目前为止，我们已经讨论了各种纯语言特性，包括函数抽象（functional abstraction）、基本类型（basic types）如数字和布尔值，以及结构类型（structured types）如记录（records）和🥑变体（variants）。这些特性构成了大多数编程语言的骨干，包括纯函数式语言如 Haskell、“主要是函数式”的语言如 ML、命令式语言如 C，以及面向对象语言如 Java。
 
 大多数实用的编程语言还包括各种**非纯的特性**（impure features），这些特性无法用我们目前使用的简单语义框架来描述。特别地，除了产生结果外，这些语言中的项的求值可能会对可变变量进行赋值（mutable variables，如引用单元 reference cells、数组 arrays、可变记录字段 mutable record fields 等），对文件、显示器或网络连接进行输入输出（I/O），通过异常（exceptions）、跳转（jumps）或连续体（continuations）进行非本地控制转移，进行进程间的同步和通信，等等。在编程语言的文献中，这些计算的“副作用”更一般地称为**计算效应**（computational effects）。
 
-在本章中，我们将看到一种计算效应——**可变引用**（mutable references）——如何添加到我们已经研究的演算中。主要的扩展将是显式地处理存储器（store，也称为堆 heap）。这个扩展的定义是直接的；最有趣的部分是我们需要对类型保持定理（type preservation theorem，13.5.3）进行细化。我们将在第14章讨论另一种效应——异常（exceptions）和非本地控制转移。
+在本章中，我们将看到一种计算效应——**可变引用**（mutable references）——如何添加到我们已经研究的演算中。主要的扩展将是显式地处理存储器（store，也称为堆 heap）。这个扩展的定义是直接的；最有趣的部分是我们需要对类型保持定理（type preservation theorem，13.5.3）进行🥑细化。我们将在第14章讨论另一种效应——异常（exceptions）和非本地控制转移。
 
 ---
 
